--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,9 @@ h1 {
   -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
-
+.search img:hover {
+  transform: scale(1.1);
+}
 .search input {
   flex: 1;
   border: none;
@@ -103,6 +105,26 @@ h1 {
   border: none;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+  transform: translateY(0);
+  opacity: 1;
+}
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.movie:nth-of-type(odd) {
+  animation: slideIn 0.5s ease-in-out;
+}
+
+.movie:nth-of-type(even) {
+  animation: slideIn 0.5s ease-in-out 0.2s;
 }
 
 .movie div:nth-of-type(1) {
